[clone] Fix: single-vm promote from my own kafka stream was not working.
The single VM would grab zk leadership and write to the same kafka
topic we consume from.

Allows SpoolBackingStore as a valid sds
impl on single nodes topologies.